# dreame-valetudo

./: .editorconfig  .gitignore  .renovaterc.json  CHANGELOG.md  README.md  pyproject.toml
.forgejo/workflows/: ci.yml  prerelease.yml  publish.yml  release.yml
.github/workflows/: release-macos.yml
docs/: DESIGN.md  LAYOUT.md  README.md  TROUBLESHOOTING.md
docs/research/: 01-boot-chain-and-partitions.md  02-fel-fastboot-recon.md  03-flash-authorization-token.md  04-boot0-write-and-verify.md  05-efuse-rotpk-secure-boot.md  06-toc0-format-and-signature.md  07-spl-verification-the-wall.md  08-toc1-format-and-resigning.md  09-uboot-optee-gate.md  10-uart-boot-signatures.md  11-rootfs-data-encryption.md  12-status-and-forward-paths.md  13-safety-recovery-and-dead-ends.md  14-restoration-and-sourcing.md  README.md
dreame_valetudo/: __init__.py  __main__.py  cli.py  console.py  constants.py  context.py  download.py  dust_decrypt.py  dustbuilder.py  fastboot.py  fel.py  hazards.py  log.py  manifest.py  migrate.py  platform_env.py  profiles.py  run.py  ssh.py  udev.py  update_check.py  util.py  whatsnew.py  workspace.py
dreame_valetudo/phases/: __init__.py  doctor.py  fetch.py  fixes.py  image.py  manage.py  misc.py  push.py  recon.py  root.py
libexec/: dustbuilder-form.sig  fastboot-libusb.py
packaging/: README.md  build-bundle.sh  build-fastboot-client.sh  build-tarball.sh  changelog-section.sh  deb-postinstall.sh  deb.Dockerfile  entitlements.plist  forgejo-release.sh  github-release.sh  nfpm.yaml  pyinstaller-entry.py  reconcile-releases.sh  release-common.sh  update-tap.sh
packaging/homebrew/: dreame-valetudo-rc.rb  dreame-valetudo.rb
packaging/udev/: 99-dreame-valetudo.rules
tests/integration/: reconcile.sh  release-scripts.sh
tests/python/: conftest.py  test_auto.py  test_cli.py  test_cli_pickers.py  test_console.py  test_context.py  test_decrypt_migration.py  test_download.py  test_dust_decrypt.py  test_dustbuilder.py  test_fastboot.py  test_fastboot_libusb.py  test_fel.py  test_hazards.py  test_integration_flow.py  test_log.py  test_manage.py  test_manifest.py  test_migrate.py  test_phase_doctor.py  test_phase_fetch.py  test_phase_fixes.py  test_phase_image.py  test_phase_misc.py  test_phase_push.py  test_phase_recon.py  test_phase_root.py  test_platform_env.py  test_profiles.py  test_run.py  test_ssh.py  test_udev.py  test_update_check.py  test_util.py  test_whatsnew.py  (+1 more)
(+23 files in other folders)
