# dreame-valetudo — Python CLI to root Dreame robot vacuums and install Valetudo.
[project]
name = "dreame-valetudo"
version = "0.2.0-rc.3"
description = "Guided, idempotent tool to root supported Dreame robot vacuums and install Valetudo"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
# The package itself imports no third-party runtime deps: pyusb is needed only by the fastboot
# libusb client, which runs as a subprocess (via `uv run --with pyusb`, a pyusb-capable python, or
# the frozen dreame-fastboot binary). PYUSB_VERSION is pinned in constants.py (Renovate-tracked).
dependencies = []

[project.scripts]
dreame-valetudo = "dreame_valetudo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dreame_valetudo"]

# Ship the fastboot libusb client + the form baseline inside the package, so an installed wheel /
# PyInstaller bundle resolves them via resolve_libexec.
[tool.hatch.build.targets.wheel.force-include]
"libexec/fastboot-libusb.py" = "dreame_valetudo/libexec/fastboot-libusb.py"
"libexec/dustbuilder-form.sig" = "dreame_valetudo/libexec/dustbuilder-form.sig"
# Ship the changelog inside the package so the installed tool can show "what's new" on upgrade.
"CHANGELOG.md" = "dreame_valetudo/CHANGELOG.md"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",  # pyflakes + the default pycodestyle subset
    "I",                     # import sorting
    "B", "C4", "FLY", "ISC", "PERF", "PIE", "PTH", "RET", "RUF", "SIM", "UP",
    "PLC", "PLE", "PLW",     # pylint conventions/errors/warnings (not the noisy PLR refactor set)
]

[tool.ruff.lint.per-file-ignores]
# False positive: ruff can't see that console.die is NoReturn across the module boundary.
"dreame_valetudo/fastboot.py" = ["RET503"]
"dreame_valetudo/phases/manage.py" = ["RET503"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/python"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["dreame_valetudo", "libexec/fastboot-libusb.py"]

# pyusb ships no type stubs; the fastboot client is the only thing that imports it.
[[tool.mypy.overrides]]
module = ["usb.*"]
ignore_missing_imports = true

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]
